--- a/weapp/templates/card_base.html
+++ b/weapp/templates/card_base.html
@@ -41,11 +41,18 @@
 		<div class="xui-i pr">
 			<ul class="xui-navBar-box clearStyle">
 				{% if first_navs %}
-					{% for nav in first_navs %}
-					<li {% ifequal nav.name '大数据挖掘' %}class="xui-i-bigDataTab"{% endifequal %}>
-						<a {% ifequal first_nav_name nav.inner_name %}class="active"{% endifequal %} href='{{nav.url}}' title='{{nav.name}}'>{{nav.name}}</a>
-					</li>
-					{% endfor %}
+					{% ifequal first_nav_name 'card' %}
+						<li>
+							<a {% ifequal first_nav_name 'card' %}class="active"{% endifequal %} href='/card/cards/get/' title='微众卡管理'>微众卡管理</a>
+						</li>
+					{% else %}
+
+						{% for nav in first_navs %}
+						<li {% ifequal nav.name '大数据挖掘' %}class="xui-i-bigDataTab"{% endifequal %}>
+							<a {% ifequal first_nav_name nav.inner_name %}class="active"{% endifequal %} href='{{nav.url}}' title='{{nav.name}}'>{{nav.name}}</a>
+						</li>
+						{% endfor %}
+					{% endifequal %}
 				{% else %}
 					<li>
 						<a {% ifequal first_nav_name 'card' %}class="active"{% endifequal %} href='/card/cards/get/' title='微众卡管理'>微众卡管理</a>
