--- a/weapp/termite/static/css/apps/powerme_yellow.css
+++ b/weapp/termite/static/css/apps/powerme_yellow.css
@@ -14,7 +14,7 @@
     background-position: 9px 3px;
 }
 .wui-i-description-content {
-    color: #7a7a7c;
+    color: #7a7a7a;
 }
 .wui-masterinfo b{
     color: #fd5b0e;
@@ -24,7 +24,7 @@
     color: #6f2e0e;
 }
 .wui-i-rules-content {
-    color: #7a7a7c;
+    color: #666;
 }
 .wui-powerme-container .wui-i-line{
     border-bottom: 1px solid #6d2e0d;
