--- a/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
@@ -55,7 +55,7 @@
                     </div>
                 <ul class="wa-top100">
                     <li class="wui-i-top100-title">
-                        <span>排名</span>
+                        <span style="margin-left: 5px">排名</span>
                         <span style="margin-left: 18px">会员</span>
                         <span class="fr">助力值</span>
                     </li>
