--- a/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/powermedescription/powermedescription.html
@@ -10,7 +10,7 @@
     <div class="wui-powerme-container">
         <div class="wui-i-background-image">
             {% if component.model.background_image %}
-                <img src="{{ component.model.background_image.images.0.url }}">
+                <img src="{{ component.model.image }}">
             {% else %}
                 <img src="/termite_static/img/component/powerme/top_default.png" style="padding: 80px 0;width: 150px;height: 110px;">
             {% endif %}
