--- a/weapp/apps/customerized_apps/powerme/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/powerme/templates/editor/workbench.html
@@ -3,6 +3,16 @@
 {% load workbench_filter %}
 {% load apps_filter %}
 
+{% block css %}
+    <style>
+        .xui-propertyView-app-PowerMeGroup .propertyGroup_property_input {
+            padding-left: 0 !important;
+        }
+        .xui-propertyView-app-PowerMeGroup .propertyGroup_property_input #start_time{
+            margin-left: 3px !important;
+        }
+    </style>
+{% endblock %}
 {% block content-panel %}
 <div id="workbench" class="xui-wepage-workbenchPage clearfix pr xui-appPage-commonStyle">
   <div class="relative">
