--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
@@ -81,7 +81,7 @@ a.xui-btn:link,a.xui-btn:hover,.xui-btn:visited{color:#fff!important;}
                     优惠：
                 {% endif %}</div>
                 <div class="disTc em85 pr" style="width:3.1rem;top:-2px;">
-                    <span class="xui-promotionName xa-promotion" data-type="5" data-discount="{{product.integral_sale.detail.discount}}" data-per-yuan="{{per_yuan}}">积分抵扣</span>
+                    <span class="xui-promotionName xa-promotion" data-type="5"{% for rule in product.integral_sale.detail.rules %} data-discount{{rule.member_grade_id}}="{{rule.discount}}"{% endfor %} data-per-yuan="{{per_yuan}}">积分抵扣</span>
                 </div>
                 <div class="disTc c6 em8 pl5">
                     <span class="xa-intergralInfo"></span>
