--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -18,7 +18,7 @@
     }
     .wui-masterinfo span{
         margin: 0 10px;
-        font-size: 16px;
+        font-size: 1em;
     }
     .wui-mask{
         position: absolute;
