--- a/weapp/card/templates/card/editor/list_weizoom_card_detail.html
+++ b/weapp/card/templates/card/editor/list_weizoom_card_detail.html
@@ -94,7 +94,11 @@
                     <a href="/card/card_num_details/get/?card_id=${card.weizoom_card_id}&IS_CARD_RULE=TRUE">${card.weizoom_card_id}</a>
                 </td>
                 <td>
-                    ${card.password}
+                    {{if ((card.active_card_user_id == card.user_id) && card.status==0) || card.is_expired || ((card.active_card_user_id == card.user_id) && card.status==2 )}}
+                        ${card.password}
+                    {{else card.status==3 }}
+                        *******
+                    {{/if}}
                 </td>
                 <td class="card_status" td-status="${card.status}">
                     {{if card.is_expired}}
