简化buy_custom_model_product_page.js代码

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/product_detail.html
@@ -366,25 +366,25 @@ a.xui-btn:link,a.xui-btn:hover,.xui-btn:visited{color:#fff!important;}
 {% if not is_deleted_data %}
 <script type="text/javascript">
 
-//运费计算因子
-var postageFactor = {};
 // jz 2015-10-20
+//运费计算因子
+// var postageFactor = {};
 //可用积分
 // var usableIntegral = {{usable_integral}};
 //是否启用"测试购买"
 // var enableTestBuy = {% if cur_request_member.is_for_buy_test %}true{% else %}false{% endif %};
+//运费配置名称
+// var postageConfigName = "{{product.postage_config.name}}";
 //商品id
 var productId = '{{product.id}}';
 //商品类型
-var productType = "{{product.type}}";
+// var productType = "{{product.type}}";
 //商品规格值
 var models = W.loadJSON('models');
 //商品价格信息
 var priceInfo = W.loadJSON('priceInfo');
-//运费配置名称
-var postageConfigName = "{{product.postage_config.name}}";
 // 限购数量
-var countPerPurchase = {% if product.promotion.detail.count_per_purchase %}{{product.promotion.detail.count_per_purchase}}{% else %}-1{% endif %};
+// var countPerPurchase = {% if product.promotion.detail.count_per_purchase %}{{product.promotion.detail.count_per_purchase}}{% else %}-1{% endif %};
 // 是否会员商品
 var is_member_product = '{{product.is_member_product}}'
 // 促销信息
@@ -393,16 +393,16 @@ var promotion = W.loadJSON('promotion');
 $(document).ready(function() {
     view = new W.page.BuyProductPage({
         el: '.xui-page',
-        postageFactor: postageFactor,
         // jz 2015-10-20
         // usableIntegral: usableIntegral,
         // enableTestBuy: enableTestBuy,
+        // postageFactor: postageFactor,
+        // postageConfigName: postageConfigName,
         productId: productId,
-        productType: productType,
+        // productType: productType,
         models: models,
         priceInfo: priceInfo,
-        postageConfigName: postageConfigName,
-        countPerPurchase: countPerPurchase,
+        // countPerPurchase: countPerPurchase,
         promotion: promotion,
         is_member_product: is_member_product,
     });
