--- a/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/sign/templates/editor/workbench.html
@@ -362,7 +362,7 @@ ui-appPage-commonStyle">
                             ${item.total_integral}
                         </td>
                         <td>
-                            ${item.latest_coupon}
+                            {{html item.latest_coupon }}
                         </td>
                     </tr>
                     {{/each}}
