--- a/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
+++ b/weapp/apps/customerized_apps/powerme/templates/webapp/m_powerme.html
@@ -261,7 +261,7 @@
         var rect;
 
         var djage = function(){
-            return rect.top >= 0 && ($win.height()-rect.top>=0)
+            return rect.top >= 0 && ($win.height()-rect.top + $top.height()>=0)
         };
 
         window.onscroll = function(){
