修复微信放大图片；修改删除图片事件

--- a/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
+++ b/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
@@ -3741,6 +3741,7 @@ a.xui-pointCardLink:link,a.xui-pointCardLink:visited{color:#fff;}
     width: 45px;
     height: 45px;
     margin-right: 2px;
+    box-shadow: inset 0px 0px 0px 1px #ddd;
 }
 .xui-productReviewCreatePage .xui-imgList li img{
     width: 45px;
