--- a/weapp/apps/app_template/templates/editor/resource_list_template.html
+++ b/weapp/apps/app_template/templates/editor/resource_list_template.html
@@ -141,7 +141,7 @@ __STRIPPER_TAG__
 					${item.participant_count}
 				</td>
 				<td>
-					{{if (item.status === '未开启' || item.status === '已结束')}}
+					{{if (item.status === '未开始' || item.status === '已结束')}}
 					<a href="javascript:void(0)" class="xa-delete" data-id=${item.id}>删除</a>
 					{{/if}}
 					{{if (item.status === '进行中')}}
@@ -168,6 +168,7 @@ __STRIPPER_TAG__
 __STRIPPER_TAG__
 <script type="text/javascript">
 $(document).ready(function() {
+    var table = $('div[data-ui-role="advanced-table"]').data('view');
 	__STRIPPER_TAG__
 	$('body').delegate('.xa-delete', 'click', function(event) {
 		var $el = $(event.target);
@@ -189,9 +190,7 @@ $(document).ready(function() {
 					},
 					success: function(data) {
 						W.showHint('success', '删除数据成功！');
-						setTimeout(function() {
-							location.reload()
-						}, 500);
+						table.reload();
 					},
 					error: function(response) {
 						W.showHint('error', '删除数据失败，请稍后再试！');
@@ -214,9 +213,7 @@ $(document).ready(function() {
 			},
 			success: function(data) {
 				W.showHint('success', '更新状态成功！');
-				setTimeout(function() {
-					location.reload()
-				}, 500);
+				table.reload();
 			},
 			error: function(response) {
 				W.showHint('error', '更新状态失败，请稍后再试！');
@@ -239,7 +236,6 @@ $(document).ready(function() {
 		var startTime = $.trim($('[name="start_time"]').val());
 		var endTime = $.trim($('[name="end_time"]').val());
 		
-		var table = $('[data-ui-role="advanced-table"]').data('view');
 		table.reload({
 			name: name,
 			status: status,
