--- a/weapp/apps/customerized_apps/powerme/templates/editor/powermes.html
+++ b/weapp/apps/customerized_apps/powerme/templates/editor/powermes.html
@@ -137,14 +137,16 @@
 					${item.participant_count}
 				</td>
 				<td>
-				    <a href="/apps/powerme/powerme_participances/?id=${item.id}" class="ml5">查看</a>
-				    <a href="javascript:void(0);" class="ml5 xa-preview" data-id=${item.id}>预览</a>
-					{{if (item.status === '未开启' || item.status === '已结束')}}
+				    <a href="/apps/powerme/powerme_participances/?id=${item.id}" class="ml5" target="_blank">查看</a>
+				    <a href="javascript:void(0);" class="ml5 xa-preview" data-id=${item.id} target="_blank">预览</a>
+				    <a href="javascript:void(0);" class="ml5 xa-link-copy" data-clipboard-text="/m/apps/powerme/m_powerme/?webapp_owner_id=${item.owner_id}&id=${item.id}">复制链接</a>
+					{{if (item.status === '已结束')}}
 					<a href="javascript:void(0)" class="xa-delete" data-id=${item.id}>删除</a>
 					{{/if}}
-					{{if (item.status === '进行中')}}
+					{{if (item.status === '进行中' || item.status === '未开始')}}
 					<a href="javascript:void(0)" class="xa-close" data-id=${item.id}>关闭</a>
 					{{/if}}
+					<a href="javascript:void(0)" class="xa-pause-to-clean-history xui-hide" data-id=${item.id}>暂停</a>
 				</td>
 			</tr>
 			{{/each}}
@@ -163,7 +165,17 @@
 
 <script type="text/javascript">
 $(document).ready(function() {
-	
+
+    var table = $('div[data-ui-role="advanced-table"]').data('view');
+    table.afterload = function(){
+        var client = new ZeroClipboard( $(".xa-link-copy") , {
+            moviePath: "/static_v2/zero_clipboard.swf"
+        });
+        client.on('complete', function(client, args) {
+            W.showHint('success', '已经将链接复制到剪贴板');
+        });
+    };
+
 	$('body').delegate('.xa-delete', 'click', function(event) {
 		var $el = $(event.target);
 		var id = $el.data('id');
@@ -184,9 +196,7 @@ $(document).ready(function() {
 					},
 					success: function(data) {
 						W.showHint('success', '删除数据成功！');
-						setTimeout(function() {
-							location.reload()
-						}, 500);
+						table.reload();
 					},
 					error: function(response) {
 						W.showHint('error', '删除数据失败，请稍后再试！');
@@ -209,9 +219,7 @@ $(document).ready(function() {
 			},
 			success: function(data) {
 				W.showHint('success', '更新状态成功！');
-				setTimeout(function() {
-					location.reload()
-				}, 500);
+				table.reload();
 			},
 			error: function(response) {
 				W.showHint('error', '更新状态失败，请稍后再试！');
@@ -225,13 +233,32 @@ $(document).ready(function() {
 		var previewUrl = '/m/apps/powerme/m_powerme/?woid='+W.uid+'&id='+id;
 		window.open('/termite2/app_preview/?preview_url='+encodeURIComponent(previewUrl), '_tab');
 	});
+
+    $('body').delegate('.xa-pause-to-clean-history', 'click', function(){
+        console.log(111);
+        var record_id = $(this).attr('data-id');
+        W.getApi().call({
+			app: 'apps/powerme',
+			resource: 'powerme_status',
+			method: 'put',
+			args: {
+				id: record_id
+			},
+			success: function(data) {
+				var page_id = data.page_id;
+                location.href = location.host+'/powerme/powerme/?id='+record_id+'&related_page_id='+page_id;
+			},
+			error: function(response) {
+				W.showHint('error', '更新状态失败！');
+			}
+		});
+    });
 	
 	$('.xa-search').click(function(event) {
 		var name = $.trim($('[name="name"]').val());
 		var status = $.trim($('[name="status"]').val());
 		var startTime = $.trim($('[name="start_time"]').val());
 		var endTime = $.trim($('[name="end_time"]').val());
-		var table = $('[data-ui-role="advanced-table"]').data('view');
 		table.reload({
 			name: name,
 			status: status,
