--- a/weapp/static_v2/css/termite_workbench.css
+++ b/weapp/static_v2/css/termite_workbench.css
@@ -1530,10 +1530,10 @@ button.xui-deleteImageButton{
     color: #1262b7;
 }
 .xui-propertyView-app-PowerMeGroup .propertyGroup_property_horizontalField .propertyGroup_property_label{
-	width: 90px !important;
+	width: 91px !important;
 }
 .xui-propertyView-app-PowerMeGroup .propertyGroup_property_input {
-    width: 76%;
+    width: 75%;
 }
 .xui-propertyView-app-PowerMeGroup .propertyGroup_property_dialogSelectField {
     margin-top: 10px;
@@ -1578,4 +1578,22 @@ button.xui-deleteImageButton{
 }
 .xui-propertyView-app-PowerMeGroup .propertyGroup_property_dateRangeSelectorField {
     width: 83%;
+}
+
+button.xui-deleteQrcodeButton{
+	position: absolute;
+    top: -10px;
+    margin-left: 85px;
+    font-size: 14px;
+    z-index: 1;
+    background: none;
+    border: none;
+}
+.xui-deleteQrcodeButton span{
+	color: #fff;
+	display: block;
+	width: 20px;
+	height: 20px;
+	background: rgba(0,0,0,0.45);
+	border-radius: 50%;
 }
