--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -416,6 +416,32 @@
                     </div>
                     {{/if}}
 
+                    {{if (field.type == 'qrcode_dialog_select')}}
+                    <div class="propertyGroup_property_dialogSelectField propertyGroup_property_horizontalField">
+                        <div class="propertyGroup_property_label {{if field.validate}}star_show{{/if}}">${field.displayName}</div>
+                        <div class="propertyGroup_property_input" style="position:relative;width:20%">
+                            {{html W.data.getDynamicComponentDataForDialogSelectControl(component, field)}}
+                            <input data-field="${field.name}" name="${field.name}" type="hidden" />
+                                <button class="btn btn-small xui-i-triggerButton" data-target-dialog="${field.dialog}" data-dialog-parameter="${field.dialogParameter}">
+                                    {{if component.model.get(field.name)}}
+                                        ${field.triggerButton.hasdata}
+                                    {{else}}
+                                        ${field.triggerButton.nodata}
+                                    {{/if}}
+                                </button>
+
+                            {{if field.isShowCloseButton}}
+                                <button type="button" class="deleteQrcode xa-deleteQrcodeButton xui-deleteQrcodeButton" style="display:none;"><span>&times;</span></button>
+                            {{/if}}
+                        </div>
+                        {{if field.help}}
+                        <div class="qrcode_help" style="float:right;color: #666;width: 55%;">
+                            {{html field.help.replace(/\n/g, "<br/>")}}
+                        </div>
+                        {{/if}}
+                    </div>
+                    {{/if}}
+
 					{{if (field.type == 'rich_text')}}
 					<div class="propertyGroup_property_richTextField propertyGroup_property_horizontalField">
 						{{if (field.displayName)}}
