--- a/weapp/templates/weapp_jssdk_base.html
+++ b/weapp/templates/weapp_jssdk_base.html
@@ -1,6 +1,7 @@
 {% block base_js %}
 <script type="text/javascript">
       var isHideWeixinOptionMenu = {% if is_hide_weixin_option_menu %}true{% else %}false{% endif %};
+      var isShareToTimelineUseDesc = {% if share_to_timeline_use_desc %}true{% else %}false{% endif %};
 
       W.currentPageName = "{{current_page_name}}";
 
@@ -59,6 +60,7 @@
                       title:W.sharePageTitle
                   }),
                   success: function(data) {
+                      $(document).trigger("share:success",{});
                       alert("分享链接成功")
                   },
                   error: function(data){
@@ -68,7 +70,7 @@
           }
       };
 
-      if (window.location.href.indexOf('share_red_envelope') > 0 || window.location.href.indexOf('webapp_page') > 0){
+      if (isShareToTimelineUseDesc){
           W.wxShareTimelineData = {
               "imgUrl" : W.sharePageImg,
               "link" : link,
@@ -93,6 +95,7 @@
                           title:W.sharePageTitle
                       }),
                       success: function(data) {
+                          $(document).trigger("share:success",{});
                           alert("分享链接成功")
                       },
                       error: function(data){
