--- a/weapp/termite/static/css/apps/powerme_yellow.css
+++ b/weapp/termite/static/css/apps/powerme_yellow.css
@@ -1,5 +1,6 @@
+@charset "utf-8";
 .wui-powerme-container .wui-i-body .wui-i-btngroup .wui-i-btn-using, .wui-powerme-container .wui-i-body .wui-i-btngroup .wui-i-btn-power{
-    background: #FD5C0E;
+    background: #FD5B0E;
     border-radius: 5px;
     border-bottom: 3px solid #c74000;
 }
@@ -18,10 +19,9 @@
 }
 .wui-masterinfo b{
     color: #fd5b0e;
-    font-size: 15px;
 }
 .wui-powerme-container .wui-i-rules b, .wui-powerme-container .wui-i-states b{
-    color: #6f2e0e;
+    color: #6F300E;
 }
 .wui-i-rules-content {
     color: #666;
@@ -39,8 +39,8 @@
     color: #444444;
 }
 .wui-i-top100-name {
-    color: #9C998E;
+    color: #7a7a7a;
 }
 .wui-i-top100-power {
-    color: #FD6E25;
+    color: #fd5b0e;
 }
