--- a/weapp/card/templates/card/editor/list_weizoom_card.html
+++ b/weapp/card/templates/card/editor/list_weizoom_card.html
@@ -63,7 +63,7 @@
                         <th>卡类型</th>
                         <th>卡号区间</th>
                         <th>有效期</th>
-                        <th>备注</th>
+                        <th>备注 </th>
                         <th>操作</th>
                     </tr>
                 </thead>
@@ -80,8 +80,9 @@
                         <td>${card_rule.card_range}</td>
                         <td>${card_rule.valid_time_from}至${card_rule.valid_time_to}</td>
                         <td>${card_rule.remark}</td>
-                        <td>
+                        <td>{{if can_export_batch_card}}
                             <a href="javascript:void(0);" class="exportCard" onclick="export_card_list(${ card_rule.id });">导出全部</a>
+                            {{/if}}
                             <a id="appendTime" class="appendTime" rule-id="${card_rule.id}" href="javascript:void(0)">卡延期</a>
                         </td>
                     </tr>
@@ -164,6 +165,7 @@
                         _this.items = new Backbone.Collection(data.items);
                         var $node = $.tmpl(this.template, {
                             items: data.items,
+                            can_export_batch_card: data.can_export_batch_card,
                             data: data,
                             categories: data.categories,
                             'userWebappId': _this.userWebappId
