使red环境可测试，删除cdn host

--- a/weapp/templates/webapp_content_base.html
+++ b/weapp/templates/webapp_content_base.html
@@ -31,7 +31,7 @@
         <link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/emojilc6cc2.css">
         <!-- *end_prunt_task* -->
 
-        <link type="text/css" rel="stylesheet" href="{{cdn_host}}/webapp_static/backend_{{request.template_name}}/css/{{request.template_name}}.css">
+        <link type="text/css" rel="stylesheet" href="/webapp_static/backend_{{request.template_name}}/css/{{request.template_name}}.css">
         {% block css %}{% endblock %}
 
 
