是把分享到朋友圈的内容展示成分享给朋友的desc

--- a/weapp/templates/weapp_jssdk_base.html
+++ b/weapp/templates/weapp_jssdk_base.html
@@ -68,7 +68,7 @@
           }
       };
 
-      if (window.location.href.indexOf('share_red_envelope') > 0 || window.location.href.indexOf('webapp_page') > 0){
+      if (window.location.href.indexOf('share_red_envelope') > 0 || window.location.href.indexOf('webapp_page') > 0|| window.location.href.indexOf('powerme') > 0){
           W.wxShareTimelineData = {
               "imgUrl" : W.sharePageImg,
               "link" : link,
